# rs-exr2wasm2arr

./: Cargo.toml  README.md  dat2wasm2img.wasm  img.exr  index.css  index.html  index.mjs
src/: exr.rs  lib.rs
